objects/DefaultQuoteTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the template to be displayed on selection</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <description>Email Template ID for the default Email Template</description>
        <label>Email Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this template is the default template</description>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <description>Visualforce Page Name for the template</description>
        <label>Page Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Template_ID__c</fullName>
        <description>Default Quote Template ID</description>
        <label>Quote Template ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Spacer_Image_URL__c</fullName>
        <description>URL for the spacer image</description>
        <label>Template Spacer Image URL</label>
        <type>Url</type>
    </fields>
</CustomObject>